--- a/src/layouts/footer/foteer.css
+++ b/src/layouts/footer/foteer.css
@@ -1,7 +1,7 @@
 #footer{
 
     background-color: #19153D;
-    padding: 120px 0;
+    padding: 50px 0 50px 0;
 }
 
 .footer_main{
@@ -41,6 +41,7 @@
 
     font-size: 18px;
     color: #FEFEFE;
+    cursor: pointer;
 }
 
 .copyright_main{
